# maialang

./: .gitignore  CMakeLists.txt  CMakePresets.json
my_gc_language/: CMakeLists.txt  expression.cpp  expression.h  function.cpp  function.h  gc.cpp  gc.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  my_gc_language.cpp  my_gc_language.h  scope.cpp  scope.h  string_utils.h  variable.cpp  variable.h
